--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 /.idea/
 /target/
 *.iml
+/.classpath
+/.factorypath
+/.project
+/.settings/org.eclipse.jdt.apt.core.prefs
+/.settings/org.eclipse.jdt.core.prefs
+/.settings/org.eclipse.m2e.core.prefs
