--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /.settings/org.eclipse.jdt.apt.core.prefs
 /.settings/org.eclipse.jdt.core.prefs
 /.settings/org.eclipse.m2e.core.prefs
+/.settings/org.eclipse.core.resources.prefs
