--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 /.idea/
 /target/
-*.iml
+#*.iml
 /.classpath
 /.factorypath
 /.project
-/.settings/org.eclipse.jdt.apt.core.prefs
-/.settings/org.eclipse.jdt.core.prefs
-/.settings/org.eclipse.m2e.core.prefs
+/.settings/
